--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,10 @@ body {
     min-width: 960px;
     height: 1000px;
     border: 2px solid red;
-    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 /* styles for the content layout */
@@ -21,11 +24,9 @@ body {
 
 #container {
     width: 350px;
-    margin: 0 auto;
-    position: relative;
-    top: 25%;
-    bottom: 25%;
+    z-index: 5;
 } 
+
 
 .top {
     width: 100%;
@@ -101,12 +102,12 @@ p {
 
 .bg_top {
     position:absolute;
-    top: -250px;
-    left: -250px;
+    top: -325px;
+    left: -325px;
 }
 
 .bg_bottom {
     position: absolute;
-    bottom: -250px;
+    bottom: -500px;
     right: -250px;
 }
